--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
         <h3>Download LeopardCraft:</h3>
         <p>This mod uses Forge. Click the link <a href = "https://files.minecraftforge.net">here</a> to download Forge. Download the latest version of Forge for the version of Minecraft that LeopardCraft uses.</p>
         <div id = "latest">
-            <a href = "leopardcraft_latest.jar" download>Download Latest</a>
-            <label>Version 0.1.0, for Minecraft 1.15.2</label>
+            <a href = "leopardcraft-0.1.0" download>Download Latest</a>
+            <label>Version 0.1.0, for Minecraft 1.15.2, Forge 31.1.0 (do not download the latest version, use the recommended version instead.)</label>
         </div>
         <p id = "notavailabletext">Reccomended version is not currently available. Download latest version instead.</p>
         <div id = "reccomended">
-            <a href = "leopardcraft_reccomended.jar" download>Download Recommended</a>
+            <a href = "leopardcraft-0.1.0.jar" download>Download Recommended</a>
             <label>no version data available</label>
         </div>
+        <hr/>
+        <a href = "https://github.com/RobotLeopard86/LeopardCraft/wiki/Home" target = "_blank">Open LeopardCraft Wiki</a>
         <hr/>
         <a href = "olderversions.html" id = "olderversionslink">Download Older Versions</a>
     </body>
