--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h3>Download LeopardCraft:</h3>
         <p>This mod uses Forge. Click the link <a href = "https://files.minecraftforge.net">here</a> to download Forge. Download the latest version of Forge for the version of Minecraft that LeopardCraft uses.</p>
         <div id = "latest">
-            <a href = "build/libs/leopardcraft-0.1.0.jar" download>Download Latest</a>
-            <label>Version 0.1.0, for Minecraft 1.15.2, Forge 31.1.0 (do not download the latest version, use the recommended version instead.)</label>
+            <a href = "downloads/0.1.0.zip" download>Download Latest</a>
+            <label>Version 0.1.0, for Minecraft 1.15.2, Forge 31.1.0 included in downloaded zip.</label>
         </div>
         <p id = "notavailabletext">Reccomended version is not currently available. Download latest version instead.</p>
         <div id = "reccomended">
