--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <h1>Welcome to the LeopardCraft official site.</h1>
         <hr/>
         <h3>Download LeopardCraft:</h3>
-        <p>This mod uses Forge. Click the link <a href = "https://files.minecraftforge.net">here</a> to download Forge. Download the latest version of Forge for the version of Minecraft that LeopardCraft uses.</p>
+        <p>This mod uses Forge, and Forge installers are included in the download zip.</p>
         <div id = "latest">
             <a href = "downloads/0.1.0.zip" download>Download Latest</a>
-            <label>Version 0.1.0, for Minecraft 1.15.2, Forge 31.1.0 included in downloaded zip.</label>
+            <label>Version 0.1.0, for Minecraft 1.15.2.</label>
         </div>
         <p id = "notavailabletext">Reccomended version is not currently available. Download latest version instead.</p>
         <div id = "reccomended">
